01-install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    # any node can use the local storage operator
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
  name: openshift-local-storage1
