policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-team1-to-its-appproject
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: restrict-to-argoproject
    match:
      resources:
        kinds:
        - Application
      subjects:
      - kind: Group
        name: team1-admin
    validate:
      message: "For anyone `team1-admin` member, creation of ArgoCD Application must be against the `team1` AppProject."
      pattern:
        spec:
          project: team1
